--- a/src/main/resources/fes/aragon/xml/Mensaje.fxml
+++ b/src/main/resources/fes/aragon/xml/Mensaje.fxml
@@ -8,10 +8,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fes.aragon.controller.MensajeController">
    <children>
-      <StackPane layoutX="60.0" layoutY="7.0" prefHeight="386.0" prefWidth="532.0">
+      <StackPane fx:id="stcPane" layoutX="60.0" layoutY="7.0" prefHeight="386.0" prefWidth="532.0">
          <children>
             <Pane prefHeight="386.0" prefWidth="442.0">
                <children>
@@ -20,7 +19,7 @@
                   <TextArea fx:id="txaMensaje" layoutX="78.0" layoutY="68.0" prefHeight="200.0" prefWidth="365.0" />
                   <Label layoutX="13.0" layoutY="68.0" text="Mensaje:" />
                   <Button fx:id="btnBuscarArchivo" layoutX="78.0" layoutY="296.0" mnemonicParsing="false" onAction="#accionBuscarArchivo" text="Buscar Archivo" />
-                  <TextField fx:id="txtNombreArchivo" layoutX="212.0" layoutY="296.0" prefHeight="24.0" prefWidth="231.0" />
+                  <TextField fx:id="txtNombreArchivo" editable="false" layoutX="212.0" layoutY="296.0" prefHeight="24.0" prefWidth="231.0" />
                   <Button fx:id="btnMandarCorreo" layoutX="152.0" layoutY="339.0" mnemonicParsing="false" onAction="#accionMandarCorreo" text="Mandar Correo" />
                </children>
             </Pane>
